# daedalus-telegram-bot

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: create-and-push.yaml
daedalus_telegram_bot/: daedalus_telegram_bot.py
